syntax = "proto3";

option go_package = "./internal/controller/grpc/pb";

service ContentService {
  rpc GetTitleInfo (GetTitleInfoRequest) returns (GetTitleInfoReply);
}

message TitleInfo {
  string link = 1;
  string title = 2;
  string titleOrig = 3;
  string otherTitle = 4;
  int32 year = 5;
  string kinopoiskID = 6;
  string shikimoriID = 7;
  string imdbID = 8;
  repeated string screenshots = 9;
}

message TitleFilter {
  string opt = 1;
  string val = 2;
}

message GetTitleInfoRequest {
  TitleFilter filter = 1;
}

message GetTitleInfoReply {
  repeated TitleInfo titleInfo = 1;
}
